// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-chip-list> Component basic usage with links 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            <bolt-chip url="#!">
              <replace-with-grandchildren>
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--spacing-xsmall"
                   is="shadow-root"
                >
                  <replace-with-children class="c-bolt-chip__text">
                    Chip link 1
                  </replace-with-children>
                </a>
              </replace-with-grandchildren>
            </bolt-chip>
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            <bolt-chip url="#!">
              <replace-with-grandchildren>
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--spacing-xsmall"
                   is="shadow-root"
                >
                  <replace-with-children class="c-bolt-chip__text">
                    Chip link 2
                  </replace-with-children>
                </a>
              </replace-with-grandchildren>
            </bolt-chip>
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            <bolt-chip url="#!">
              <replace-with-grandchildren>
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--spacing-xsmall"
                   is="shadow-root"
                >
                  <replace-with-children class="c-bolt-chip__text">
                    Chip link 3
                  </replace-with-children>
                </a>
              </replace-with-grandchildren>
            </bolt-chip>
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            <bolt-chip url="#!">
              <replace-with-grandchildren>
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--spacing-xsmall"
                   is="shadow-root"
                >
                  <replace-with-children class="c-bolt-chip__text">
                    Chip link 4
                  </replace-with-children>
                </a>
              </replace-with-grandchildren>
            </bolt-chip>
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-chip-list> Component basic usage with mixed behavior 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            <bolt-chip url="#!">
              <replace-with-grandchildren>
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--spacing-xsmall"
                   is="shadow-root"
                >
                  <replace-with-children class="c-bolt-chip__text">
                    Chip link 1
                  </replace-with-children>
                </a>
              </replace-with-grandchildren>
            </bolt-chip>
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            <bolt-chip>
              <replace-with-grandchildren>
                <span class="c-bolt-chip c-bolt-chip--spacing-xsmall"
                      is="shadow-root"
                >
                  <replace-with-children class="c-bolt-chip__text">
                    Chip text 1
                  </replace-with-children>
                </span>
              </replace-with-grandchildren>
            </bolt-chip>
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            <bolt-chip url="#!">
              <replace-with-grandchildren>
                <a href="#!"
                   class="c-bolt-chip c-bolt-chip--link c-bolt-chip--spacing-xsmall"
                   is="shadow-root"
                >
                  <replace-with-children class="c-bolt-chip__text">
                    Chip link 3
                  </replace-with-children>
                </a>
              </replace-with-grandchildren>
            </bolt-chip>
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            <bolt-chip>
              <replace-with-grandchildren>
                <span class="c-bolt-chip c-bolt-chip--spacing-xsmall"
                      is="shadow-root"
                >
                  <replace-with-children class="c-bolt-chip__text">
                    Chip text 2
                  </replace-with-children>
                </span>
              </replace-with-grandchildren>
            </bolt-chip>
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;

exports[`<bolt-chip-list> Component basic usage without links 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <replace-with-grandchildren>
    <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            <bolt-chip>
              <replace-with-grandchildren>
                <span class="c-bolt-chip c-bolt-chip--spacing-xsmall"
                      is="shadow-root"
                >
                  <replace-with-children class="c-bolt-chip__text">
                    Chip text 1
                  </replace-with-children>
                </span>
              </replace-with-grandchildren>
            </bolt-chip>
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            <bolt-chip>
              <replace-with-grandchildren>
                <span class="c-bolt-chip c-bolt-chip--spacing-xsmall"
                      is="shadow-root"
                >
                  <replace-with-children class="c-bolt-chip__text">
                    Chip text 2
                  </replace-with-children>
                </span>
              </replace-with-grandchildren>
            </bolt-chip>
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
            <bolt-chip>
              <replace-with-grandchildren>
                <span class="c-bolt-chip c-bolt-chip--spacing-xsmall"
                      is="shadow-root"
                >
                  <replace-with-children class="c-bolt-chip__text">
                    Chip text 3
                  </replace-with-children>
                </span>
              </replace-with-grandchildren>
            </bolt-chip>
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
      <bolt-list-item last>
        <replace-with-grandchildren>
          <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
            <bolt-chip>
              <replace-with-grandchildren>
                <span class="c-bolt-chip c-bolt-chip--spacing-xsmall"
                      is="shadow-root"
                >
                  <replace-with-children class="c-bolt-chip__text">
                    Chip text 4
                  </replace-with-children>
                </span>
              </replace-with-grandchildren>
            </bolt-chip>
          </li>
        </replace-with-grandchildren>
      </bolt-list-item>
    </ul>
  </replace-with-grandchildren>
</bolt-list>
`;
